--- a/ggb/src/main.css
+++ b/ggb/src/main.css
@@ -312,7 +312,7 @@ table.md-table td {
     background-color: inherit;
 }
 
-.CodeMirror-linenumber {}
+
 
 .CodeMirror {
     text-align: left;
@@ -1058,7 +1058,7 @@ mark .md-meta {
     --control-text-color: #777;
 }
 
-@include-when-export url(https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext);
+/* @include-when-export url(https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext); */
 
 /* open-sans-regular - latin-ext_latin */
 /* open-sans-italic - latin-ext_latin */
